syntax = "proto3";

package com.example.service.grpc;

message Course {
  int64 id = 1;
  string title = 2;
  string instructor = 3;
  int32 hours = 4;
}

message CourseListResponse {
  repeated Course courses = 1;
}

message GetAllCoursesRequest {
  int32 page = 1;
  int32 size = 2;
}

message GetCourseRequest {
  int64 id = 1;
}

message CreateCourseRequest {
  string title = 1;
  string instructor = 2;
  int32 hours = 3;
}

message UpdateCourseRequest {
  int64 id = 1;
  string title = 2;
  string instructor = 3;
  int32 hours = 4;
}

message CourseResponse {
  Course course = 1;
}

message Empty {}

service CourseService {
  rpc CreateCourse (CreateCourseRequest) returns (CourseResponse);

  rpc GetAllCourses (GetAllCoursesRequest) returns (CourseListResponse);

  rpc GetCourse (GetCourseRequest) returns (CourseResponse);

  rpc UpdateCourse (UpdateCourseRequest) returns (CourseResponse);

  rpc DeleteCourse (GetCourseRequest) returns (Empty);
}
